--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -25,7 +25,7 @@ a:hover {
 }
 header {
   background-color: #f72210;
-  height: 50px;
+  height: 45px;
   width:100%;
   padding-left: 5px;
   padding-right: 5px;
@@ -385,6 +385,29 @@ border-top: 1px solid #d2d2d2;
   }
 
 }
+@media screen and (min-width: 0px) and (max-width: 354px){
+  .header-right {
+    width:60%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    font-size: 10px;
+    float: right;
+  }
+  .btn.subscribe {
+    font-size: 10px;
+    padding: 1px;
+    height: 50%;
+    margin-right: 10px;
+  }
+  .btn.sign {
+    font-size: 11px;
+  }
+  .header-left img {
+    width:90px;
+    height:20px;
+  }
+}
 @media screen and (min-width: 768px) {
   .More-Stories-Img {
     width:135px;
@@ -430,5 +453,8 @@ border-top: 1px solid #d2d2d2;
 }
 .info {
     width: 70%;
+}
+.row.header.shrink {
+  height: 45px;
 }
 }
